# pytorch-transformer-de-to-en-translation

./: .gitignore  The Annotated Transformer.ipynb  decoder_layer.py  embeddings.py  encoder_layer.py  environment.yml  helper.py  main.py  multi_head_attention.py  positional_encoding.py  positionwise_feed_forward.py  pyproject.toml  test.py  transformer.py  translation.py  vocab.pt
